# If applied, this commit will... Change header text to something more akin to a watercooler. Add form with mat-input for input field. Add a p element with orange instructions. Add some styling: place the input at the bottom in a fixed position. Set the form to the width of the screen.
# Why is this change needed?
We are adding an input field and this will be necessary for adding messages to the watercooler.

# How does it address the issue?
It adds the elements in html and styles them in CSS.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,10 +1,14 @@
 <div class='container' *ngIf="watercooler">
   <h2><a routerLink="/companies/{{watercooler.company_id}}">{{watercooler.company_name}} HQ</a></h2>
 
-  <h2>Gather 'round the Watercooler</h2>
+  <h2 class="motto">Watercooler talk</h2>
   <p>
     This is the best place to hash things out quickly, throw links and images back and forth,
     think out loud, share news, riff, and chat in real-time with your team.
+  </p>
+
+  <p>
+    Start by saying “Hi!” to your team (everyone will be notified that you’re chatting here).
   </p>
 
   <ul>
@@ -13,3 +17,8 @@
     </li>
   </ul>
 </div>
+<form class>
+  <mat-form-field>
+    <input matInput placeholder="Say something" #message />
+  </mat-form-field>
+</form>
