--- a/src/app/components/watercooler/watercooler.component.css
+++ b/src/app/components/watercooler/watercooler.component.css
@@ -2,6 +2,24 @@ h2, p {
   text-align: center;
 }
 
+p {
+  font-size: 18px;
+}
+
 ul {
   list-style: none;
+}
+
+p:nth-of-type(2) {
+  color: #ff5400;
+  font-weight: bold;
+}
+
+form {
+  position: fixed;
+  bottom: 0;
+}
+
+mat-form-field, form {
+  width: 89%;
 }
