# If applied, this commit will... Add styling to mat-card.  Add blue background and reduce the padding as well as have the title and subtitle appear alongside one another.
# Why is this change needed?
UX and Style.

# How does it address the issue?
Creates the CSS rules.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/watercooler/watercooler.component.css
+++ b/src/app/components/watercooler/watercooler.component.css
@@ -23,3 +23,29 @@ form {
 mat-form-field, form {
   width: 89%;
 }
+
+mat-card {
+  background: #ecf9fd;
+  border-radius: 25px;
+  height: 60px;
+  padding: 5px;
+}
+
+.watercooler-header-image {
+  background-image: url('http://via.placeholder.com/44x44');
+  background-size: cover;
+}
+.mat-card-title,
+.mat-card-subtitle {
+  font-size: 13px;
+}
+#subtitle {
+  margin-left: 5px;
+  margin-top: 0;
+  font-weight: bold;
+  white-space: nowrap;
+}
+
+.mat-title-container {
+  display: flex;
+}
