# If applied, this commit will... Change value to company.name.
# Why is this change needed?
We are now using the company service to make the call.

# How does it address the issue?
Uses the variable returned from the call.

# Provide links to any relevant tickets, articles or other resources
Previous 2 commits. Next commit.

--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,5 +1,5 @@
 <div class='container' *ngIf="watercooler">
-  <h2><a routerLink="/companies/{{watercooler.company_id}}">{{watercooler.company_name}} HQ</a></h2>
+  <h2><a routerLink="/companies/{{watercooler.company_id}}">{{company?.name}} HQ</a></h2>
 
   <h2 class="motto">Watercooler talk</h2>
   <p>
