# If applied, this commit will... Remove the ? in company?.name. Instead change ng-if to company.
# Why is this change needed?
It delays the view until company has been assigned. Otherwise the page loads before company name appears.

# How does it address the issue?
Slows the code from loading until the variable is assigned a value.

# Provide links to any relevant tickets, articles or other resources

--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -1,6 +1,5 @@
-<div class='container' *ngIf="watercooler">
-  <h2><a routerLink="/companies/{{watercooler.company_id}}">{{company?.name}} HQ</a></h2>
-
+<div class='container' *ngIf="company">
+  <h2><a routerLink="/companies/{{watercooler.company_id}}">{{company.name}} HQ</a></h2>
   <h2 class="motto">Watercooler talk</h2>
   <p>
     This is the best place to hash things out quickly, throw links and images back and forth, think out loud, share news, riff, and chat in real-time with your team.
