--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="announcments">Placeholder for announcements</div>
 <mat-grid-list cols="2" rowHeight="200px" [gutterSize]="10">
   <mat-grid-tile *ngFor="let company of companies" routerLink="/companies/{{company.id}}">
-    <mat-grid-tile-header>{{ company.name }}Some Company HQ</mat-grid-tile-header>
+    <mat-grid-tile-header>{{ company.name }}</mat-grid-tile-header>
     Company-wide announcements and stuff everyone needs to know
     <mat-icon aria-label="delete"></mat-icon>
   </mat-grid-tile>
