--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -11,21 +11,7 @@
 
   <ul>
     <li *ngFor="let message of watercooler.messages">
-      <mat-card class="watercooler-card">
-        <mat-card-header>
-          <div mat-card-avatar class="watercooler-header-image"></div>
-          <div class="mat-title-container">
-                    <mat-card-title>{{message.created}}</mat-card-title>
-          <mat-card-subtitle id='subtitle'>{{message.author}}</mat-card-subtitle>
-          </div>
-
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            {{message.content}}
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <app-message></app-message>
     </li>
   </ul>
 </div>
