--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -2,10 +2,9 @@
   <mat-card-header>
     <div mat-card-avatar class="watercooler-header-image"></div>
     <div class="mat-title-container">
-              <mat-card-title>{{message.date}}</mat-card-title>
-    <mat-card-subtitle id='subtitle'>{{message.author}}</mat-card-subtitle>
+      <mat-card-title>{{message.created | date}}</mat-card-title>
+      <mat-card-subtitle id='subtitle'>{{message.author}}</mat-card-subtitle>
     </div>
-
   </mat-card-header>
   <mat-card-content>
     <p>
