Add message-wrapper component.

--- a/src/app/components/watercooler/watercooler.component.html
+++ b/src/app/components/watercooler/watercooler.component.html
@@ -10,9 +10,7 @@
   </p>
 
   <ul>
-    <li *ngFor="let message of watercooler.messages">
-      <app-message></app-message>
-    </li>
+    <app-message-wrapper></app-message-wrapper>
   </ul>
 </div>
 <app-watercooler-input></app-watercooler-input>
