Change: move clearing box to html.

--- a/src/app/components/watercooler-input/watercooler-input.component.html
+++ b/src/app/components/watercooler-input/watercooler-input.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-  <form class (ngSubmit)="addMessage()" (keyup.enter)="addMessage(box.value)">
+  <form class (ngSubmit)="addMessage()" (keyup.enter)="addMessage(box.value); box.value='';">
     <mat-form-field>
       <input #box matInput placeholder="Say something"  [(ngModel)]="messageText" [ngModelOptions]="{standalone: true}" />
     </mat-form-field>
