Change list to unordered.

--- a/src/app/components/reports/reports.component.css
+++ b/src/app/components/reports/reports.component.css
@@ -1,5 +1,13 @@
-mat-list {
+ul {
   background: rgba(223, 217, 58, 0.5);
   bottom: 0;
+  font-size: 8px;
+  list-style: none;
+  padding: 2px 5px;
   position: fixed;
+}
+
+li {
+  font-size: 12px;
+  height: 24px;
 }
