--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,3 +1,3 @@
-<mat-list *ngIf="reports">
- <mat-list-item *ngFor="let report of reports"> {{report.id}} - {{report.content}} </mat-list-item>
-</mat-list>
+<ul *ngIf="reports">
+ <li *ngFor="let report of reports; let i = index;">{{i}} - {{report}}</li>
+</ul>
