Add style to unordered list.

--- a/src/app/components/reports/reports.component.css
+++ b/src/app/components/reports/reports.component.css
@@ -3,6 +3,8 @@ ul {
   bottom: 0;
   font-size: 8px;
   list-style: none;
+  max-height: 100px;
+  overflow-y: scroll;
   padding: 2px 5px;
   position: fixed;
 }
