Add top of page to html.

--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -1,3 +1,10 @@
-<p>
-  message-board works!
-</p>
+<div class="banner">
+  <h3 class="subtitle">Kick Things off with your first message.</h3>
+  <p>Post an announcement, pitch an idea, or ask a question.</p>
+</div>
+<div class="clearspace">
+
+</div>
+<div class="banner">
+  <h3>Company HQ</h3>
+</div>
