Add ngIF to element.

--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -5,6 +5,6 @@
 <div class="clearspace">
 
 </div>
-<div class="banner">
-  <h3>Company HQ</h3>
+<div class="section" *ngIf="company">
+  <h3>{{company.name}} HQ</h3>
 </div>
