--- a/src/app/components/company-dashboard/company-dashboard.component.html
+++ b/src/app/components/company-dashboard/company-dashboard.component.html
@@ -10,7 +10,7 @@
         <mat-icon aria-label="forum" matTooltip="Water Cooler">forum</mat-icon>
       </div>
     </mat-grid-tile>
-    <mat-grid-tile routerLink="/messageboard/{{company.messageboard_id}}">
+    <mat-grid-tile routerLink="/messageboards/{{company.messageboard_id}}">
       <div class="icon-container" id="message-board">
         <mat-grid-tile-header>Message Board</mat-grid-tile-header>
         <mat-icon  aria-label="message board" matTooltip="Mesage Board">chat</mat-icon>
