--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -7,28 +7,32 @@
 </div>
 <div class="section" *ngIf="company">
   <h3>{{company.name}} HQ</h3>
-  <!-- <form> -->
-  <div class="form-wrapper" *ngIf="messageboard">
-    <mat-form-field>
-      <mat-select placeholder="Pick a category (optional)">
-        <mat-option *ngFor="let category of messageboard.categories" [value]="category">
-          {{ category }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+  <div class="message-input-wrapper" *ngIf="mbPosts.length == 0">
+      <!-- <form> -->
+    <div class="form-wrapper" *ngIf="messageboard">
+      <mat-form-field>
+        <mat-select placeholder="Pick a category (optional)">
+          <mat-option *ngFor="let category of messageboard.categories" [value]="category">
+            {{ category }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="title-container">
+      <mat-form-field>
+        <input matInput placeholder="Title...">
+      </mat-form-field>
+    </div>
+    <div class="body-container">
+      <mat-form-field>
+        <textarea matInput placeholder="Write away..." matTextareaAutosize matAutosizeMinRows="6" matAutosizeMaxRows="6"></textarea>
+      </mat-form-field>
+    </div>
+    <div class="button-row">
+      <button mat-raised-button color="accent">Save as a draft</button>
+    </div>
+      <!-- </form> -->
   </div>
-  <div class="title-container">
-    <mat-form-field>
-      <input matInput placeholder="Title...">
-    </mat-form-field>
-  </div>
-  <div class="body-container">
-    <mat-form-field>
-      <textarea matInput placeholder="Write away..." matTextareaAutosize matAutosizeMinRows="6" matAutosizeMaxRows="6"></textarea>
-    </mat-form-field>
-  </div>
-  <div class="button-row">
-    <button mat-raised-button color="accent">Save as a draft</button>
-  </div>
-  <!-- </form> -->
+
+
 </div>
