--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -7,10 +7,14 @@
 </div>
 <div class="section" *ngIf="company">
   <h3>{{company.name}} HQ</h3>
-  <div class="message-list-wrapper" *ngIf="mbPosts">
-    
+  <div class="message-list-wrapper" *ngIf="mbposts">
+    <mat-list role="list">
+      <mat-list-item *ngFor="let mbpost of mbposts" role="listitem">
+       {{mbpost.title}} - {{mbpost.author}} - {{mbpost.created}}
+      </mat-list-item>
+    </mat-list>
   </div>
-  <div class="message-input-wrapper" *ngIf="mbPosts.length == 0">
+  <div class="message-input-wrapper" *ngIf="!mbposts">
       <!-- <form> -->
     <div class="form-wrapper" *ngIf="messageboard">
       <mat-form-field>
