Change class name.

--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -35,7 +35,7 @@
         <textarea matInput placeholder="Write away..." matTextareaAutosize matAutosizeMinRows="6" matAutosizeMaxRows="6"></textarea>
       </mat-form-field>
     </div>
-    <div class="button-row">
+    <div class="button-column">
       <button mat-raised-button color="accent">Save as a draft</button>
       <button mat-raised-button color="primary">Post this message</button>
     </div>
