--- a/src/app/components/message-board/message-board.component.css
+++ b/src/app/components/message-board/message-board.component.css
@@ -46,7 +46,6 @@ button {
   border-radius: 2rem;
 }
 
-
 .no-messages-container button {
   width: 100%;
   margin: 5px auto;
@@ -64,4 +63,10 @@ button {
 
 .body-container >>> .mat-form-field-label {
   color: grey !important;
+}
+
+.messages-wrapper button,
+.messages-wrapper .form-wrapper {
+  margin: 0 5px;
+
 }
