--- a/src/app/components/message-board/message-board.component.css
+++ b/src/app/components/message-board/message-board.component.css
@@ -31,8 +31,7 @@ mat-list-item {
   color: black !important;
 }
 
-.section,
-.no-messages-container mat-form-field {
+.section {
   width: 100%;
   color: black;
 }
