--- a/src/app/components/mb-messages/mb-messages.component.css
+++ b/src/app/components/mb-messages/mb-messages.component.css
@@ -38,6 +38,10 @@ button {
   color: black !important;
 }
 
+.mat-card {
+  color: black;
+  background: none;
+}
 
  button,
 .form-wrapper {
@@ -57,5 +61,5 @@ button {
 }
 
 .message-header-image {
-  height: 100%;  
+  height: 100%;
 }
