--- a/src/app/components/mb-messages/mb-messages.component.html
+++ b/src/app/components/mb-messages/mb-messages.component.html
@@ -25,7 +25,7 @@
             </mat-card-header>
             <mat-card-content>
               <p>
-                {{mbpost.created}} - {{mbpost.content}}
+                {{mbpost.created | date:'mediumDate'}} - {{mbpost.content}}
               </p>
             </mat-card-content>
           </mat-card>
