--- a/src/app/components/mb-messages/mb-messages.component.css
+++ b/src/app/components/mb-messages/mb-messages.component.css
@@ -1,8 +1,12 @@
 
 
 p {
-  color: grey;
-  margin-top: 2px;
+  color: #877457;
+  /* margin-top: 2px; */
+}
+
+p span {
+  color: black;
 }
 
 
@@ -38,6 +42,10 @@ button {
   color: black !important;
 }
 
+>>> .mat-list-item-content {
+  padding: 0 !important;
+}
+
 .mat-card {
   color: black;
   background: none;
@@ -53,7 +61,7 @@ button {
 }
 
 .mat-card-subtitle {
-    color: grey;
+    color: #877457;
 }
 
  button,
