--- a/src/app/components/message-board/message-board.component.html
+++ b/src/app/components/message-board/message-board.component.html
@@ -1,41 +1,2 @@
-<div class="no-messages-container" *ngIf="messages?.length == 0">
-  <div class="banner">
-    <h3 class="subtitle">Kick Things off with your first message.</h3>
-    <p>Post an announcement, pitch an idea, or ask a question.</p>
-  </div>
-  <div class="clearspace">
-  </div>
-  <div class="section" *ngIf="company">
-    <h3>{{company.name}} HQ</h3>
-
-    <div class="message-input-wrapper" >
-              <!-- <form> -->
-      <div class="form-wrapper" *ngIf="messageboard">
-        <mat-form-field>
-          <mat-select placeholder="Pick a category (optional)"  [(ngModel)]="selectedCategory">
-            <mat-option *ngFor="let category of messageboard.categories" [value]="category.id">
-              {{ category.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="title-container">
-        <mat-form-field>
-          <input matInput placeholder="Title...">
-        </mat-form-field>
-      </div>
-      <div class="body-container">
-        <mat-form-field>
-          <textarea matInput placeholder="Write away..." matTextareaAutosize matAutosizeMinRows="6" matAutosizeMaxRows="6"></textarea>
-        </mat-form-field>
-      </div>
-      <div class="button-column">
-        <button mat-raised-button color="accent">Save as a draft</button>
-        <button mat-raised-button color="primary">Post this message</button>
-      </div>
-        <!-- </form> -->
-    </div>
-  </div>
-</div>
-
+<app-mb-message-input></app-mb-message-input>
 <app-mb-messages></app-mb-messages>
